--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">DroidSettingsLauncher</string>
     <string name="action_settings">Settings</string>
+    <string name="main_settings">Droid Settings</string>
+    <string name="display_settings">Display Settings</string>
 </resources>
